--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/",
+    "start": "node src/",
     
     "deploy":"firebase deploy --only functions"
   },
