change de .env credentials

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-GOOGLE_APPLICATION_CREDENTIALS=C:\Users\david\Documents\Universidad\Cibernética\Programación de aplicaciones y servicios\Proyecto-Web_David-Ricardo-Jose/firebase-key.json
+GOOGLE_APPLICATION_CREDENTIALS="./firebase-key.json"
