--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "proyecto-web_david-ricardo-jose",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.js",
-    
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "deploy":"firebase deploy --only functions"
   },
   "keywords": [],
